[tool.poetry]
name = "rename_me"
version = "0.1.0"
description = ""
authors = ["jack <jack>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.115.12"}
uvicorn = "^0.34.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
